Fix post excerpt padding on tablet view

--- a/less/components/post-excerpt.less
+++ b/less/components/post-excerpt.less
@@ -10,7 +10,7 @@
   padding: 0 25px;
   width: 100%;
 
-  @media @tablet {
+  @media @tablet-wide {
     padding: 0;
   }
 }
